--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
-title: Minimal theme
+title: EBook Store
 logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
-show_downloads: true
-google_analytics:
-theme: jekyll-theme-minimal
+description: A Divinemonk creation!
+show_downloads: false
+google_analytics: 
+theme: jekyll-theme-architect
+
+# jekyll-theme-minimal
